[package]
name = "curvine-common"
version.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orpc = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-stream =  { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
raft = { workspace = true }
prost = { workspace = true }
prost-build = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
num_enum = { workspace = true }
hyper = { workspace = true }
percent-encoding = "2.3"
bincode = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
rocksdb = { workspace = true }
byteorder = { workspace = true }
flate2 = { workspace = true }
dashmap = { workspace = true }
linked-hash-map = { workspace = true }
crossbeam = { workspace = true }
axum = { workspace = true }
mini-moka = { workspace = true }
slog = { workspace = true }
slog-stdlog  = { workspace = true }
chrono = { workspace = true }
trait-variant = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }
bitflags = { workspace = true }

mimalloc = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
tikv-jemalloc-sys = { workspace = true, optional = true }

[features]
jemalloc = [
    "dep:tikv-jemallocator",
    "dep:tikv-jemalloc-sys",
]
mimalloc = ["dep:mimalloc"]
system = []

[build-dependencies]
prost-build = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }