[package]
name = "curvine-tests"
version = "0.1.0"
edition = "2021"

[features]
# Enable OSS-HDFS backend specific tests / code paths (Jindo-based).
# This is used by `#[cfg(feature = "oss-hdfs")]` in integration tests.
oss-hdfs = ["curvine-ufs/oss-hdfs"]

[dependencies]
orpc = { workspace = true }
curvine-common = { workspace = true }
curvine-server = { workspace = true }
curvine-client = { workspace = true }
# curvine-lancedb-rs = { workspace = true }
curvine-ufs = { workspace = true }
tokio  = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
# lance-io = "4.0.0"
object_store = "0.12.5"
bytes = { workspace = true }
once_cell = { workspace = true }
clap = { workspace = true }
arrow-array = "57.2"
arrow-schema = "57.2"
awaitility = "0.4"
tempfile = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
curvine-fuse = { workspace = true }
